@startuml
class com.example.mediatech.medium.DVD {
- String fsk
+ String getFsk()
}


class com.example.mediatech.HelloApplication {
+ void start(Stage)
+ {static} void main(String[])
}

abstract class com.example.mediatech.medium.AbstractMedium {
- String titel
- String autor
- int erscheinungsjahr
+ String getTitel()
+ String getAutor()
+ int getErscheinungsjahr()
}


class com.example.mediatech.HelloController {
+ Button addMediaButton
+ Button searchButton
+ Button manageButton
+ TableView<AbstractMedium> mediaTable
- ObservableList<AbstractMedium> medienListe
+ TableColumn<AbstractMedium,String> titleColumn
+ TableColumn<AbstractMedium,String> authorColumn
+ TableColumn<AbstractMedium,Integer> yearColumn
+ TableColumn<AbstractMedium,String> typColumn
+ TextField YearTF
+ TextField AuthorTF
+ TextField TitleTF
+ RadioButton buchRB
+ RadioButton dvdRB
+ Button addButton
+ Button deleteButton
+ Label errorLabel
# void toggleA()
# void toggleB()
+ void initialize(URL,ResourceBundle)
# void onAddButtonClick()
# void onDeleteButtonClick()
}


class com.example.mediatech.medium.Buch {
- String isbn
- int seitenanzahl
+ String getIsbn()
+ int getSeitenanzahl()
}




com.example.mediatech.medium.AbstractMedium <|-- com.example.mediatech.medium.DVD
javafx.application.Application <|-- com.example.mediatech.HelloApplication
javafx.fxml.Initializable <|.. com.example.mediatech.HelloController
com.example.mediatech.medium.AbstractMedium <|-- com.example.mediatech.medium.Buch
@enduml